--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_subdirectory(src)  # Подключение подкаталога src, где и находится библиотека arrayProcessor
+add_subdirectory(src)
+add_subdirectory(tests)
